# XAgent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.example.yaml  config.yaml.example  docker-compose.yml  pyproject.toml
docs/: architecture.md
openspec/changes/0001-simplify-bus/: design.md  proposal.md  tasks.md
src/xagent/agent/: __init__.py  errors.py  loop.py  memory.py  paths.py  policies.py  skills.py  tool_result_runtime.py  traces.py
src/xagent/bus/: __init__.py  errors.py  events.py  messages.py  queue.py  typed_bus.py  types.py
src/xagent/channel/: __init__.py  access.py  base.py  contracts.py  models.py  session_routing.py  trace_channel.py
src/xagent/cli/: __init__.py  chat.py  config.py  config_cmd.py  main.py  prompt.py  render.py  run.py  runtime.py
src/xagent/config/: env.py  (+4 more)
tests/: test_agent_loop.py  test_agent_runner.py  test_agent_runtime.py  test_anthropic_provider.py  test_approvals.py  test_ask_user_question.py  test_auto_compact.py  test_channel_bridge.py  test_channel_contracts.py  test_channel_manager.py  test_channels.py  test_cli.py  test_cli_channel.py  test_cli_chat.py  test_cli_run.py  test_cli_schedule.py  test_cli_schedule_persistent.py  test_config_commands.py  test_config_loader.py  test_config_session.py  test_cron.py  test_event_bus.py  test_feishu_adapter.py  test_feishu_transport.py  test_gateway.py  test_guardrails.py  test_lark_channel.py  test_memory.py  test_message_bus.py  test_openai_provider.py  test_post_turn_hooks.py  test_project_rules.py  test_prompts.py  test_provider_agent.py  test_provider_factory.py  test_runtime_manager.py  test_runtime_manager_close.py  test_runtime_message_boundary.py  test_scheduler.py  test_scheduler_persistent.py  (+11 more)
xagent/: __init__.py
xagent/agent/: __init__.py  commands.py  context.py  interactions.py  loop.py  memory.py  permissions.py  prompts.py  runner.py  runtime.py  skills.py  subagents.py
xagent/bus/: __init__.py  messages.py  queue.py
xagent/channels/: __init__.py  base.py  factory.py  lark.py  manager.py  weixin.py
xagent/cli/: __init__.py  agent.py  channels.py  factory.py  gateway.py  main.py  workspace.py
xagent/config/: __init__.py  model.py
xagent/cron/: __init__.py  model.py  service.py
xagent/prompts/: dream.md  empty_retry.md  summary.md  system.md
xagent/providers/: __init__.py  factory.py  openai_compatible.py  registry.py  types.py  util.py
xagent/session/: __init__.py  package.py
(+182 files in other folders)
