[project]
name = "xagent"
version = "0.1.0"
description = "XAgent is a Python coding assistant CLI."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "textual>=3.0",
  "prompt-toolkit>=3.0",
  "pydantic>=2.7",
  "anyio>=4.0",
  "openai>=1.0",
  "anthropic>=0.34",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
xagent = "xagent.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
