[project]
name = "xagent"
version = "0.2.0"
description = "A greenfield local AI agent runtime."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "croniter>=2.0",
  "ddgs>=9.0",
  "httpx>=0.27",
  "jinja2>=3.1.6",
  "lark-oapi>=1.5.3",
  "openai>=1.0",
  "pyyaml>=6.0",
  "qrcode[pil]>=8.0",
  "tavily-python>=0.5",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
xagent = "xagent.cli.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["xagent*"]

[tool.setuptools.package-data]
xagent = ["templates/prompts/*.md", "templates/memory/*.md"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
